--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <a class="logo-studio" href=""><span class="logo-web">Web</span>Studio</a>
+                <a class="logo-studio" href="./index.html"><span class="logo-web">Web</span>Studio</a>
             </div>
             <ul class="site-nav">
                 <li class="nav-item"><a href="./index.html">Студия</a></li>
@@ -93,18 +97,18 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="logo-studio-white" href=""><span class="logo-web">Web</span>Studio</a>
+        <a class="logo-studio-white" href="./index.html"><span class="logo-web">Web</span>Studio</a>
         <address>
             <ul class="footer-adress">
-                <li><a href="https://goo.gl/maps/F9UGEikjTN2jMp9C9" target="_blank">
+                <li class="maps"><a href="https://goo.gl/maps/F9UGEikjTN2jMp9C9" target="_blank">
                     г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
             </ul>
             <ul class="auth-footer">
-                <li><a href="mailto:info@example.com">
+                <li class="mail"><a href="mailto:info@example.com">
                     info@example.com</a>
                 </li>
-                <li><a href="tel:+380991111111">
+                <li class="tell"><a href="tel:+380991111111">
                     +38 099 111 11 11</a>
                 </li>   
             </ul>
