--- a/portfolio.html
+++ b/portfolio.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <a class="logo-studio" href=""><span class="logo-web">Web</span>Studio</a>
+                <a class="logo-studio" href="./index.html"><span class="logo-web">Web</span>Studio</a>
             </div>
             <ul class="site-nav">
                 <li class="nav-item"><a href="./index.html">Студия</a></li>
@@ -29,16 +29,14 @@
         </ul>
     </header>
     <main>
-        <section>
+        <section class="portfolio-button">
             <h1>Портфолио</h1>
             <ul>
-                <li>
-                    <button type="button">Все</button>
-                    <button type="button">Веб-сайты</button>
-                    <button type="button">Приложения</button>
-                    <button type="button">Дизайн</button>
-                    <button type="button">Маркетинг</button>
-                </li>
+                <li><button type="button">Все</button></li>
+                <li><button type="button">Веб-сайты</button></li>
+                <li><button type="button">Приложения</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
             </ul>
         </section>
         <section class="portfolio">
@@ -108,18 +106,18 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="logo-studio-white" href=""><span class="logo-web">Web</span>Studio</a>
+        <a class="logo-studio-white" href="./index.html"><span class="logo-web">Web</span>Studio</a>
         <address>
             <ul class="footer-adress">
-                <li><a href="https://goo.gl/maps/F9UGEikjTN2jMp9C9" target="_blank">
+                <li class="maps"><a href="https://goo.gl/maps/F9UGEikjTN2jMp9C9" target="_blank">
                         г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
             </ul>
             <ul class="auth-footer">
-                <li><a href="mailto:info@example.com">
+                <li class="mail"><a href="mailto:info@example.com">
                         info@example.com</a>
                 </li>
-                <li><a href="tel:+380991111111">
+                <li class="tell"><a href="tel:+380991111111">
                         +38 099 111 11 11</a>
                 </li>
             </ul>
