--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                 <a class="logo-studio" href="./index.html"><span class="logo-web">Web</span>Studio</a>
             </div>
             <ul class="site-nav">
-                <li class="nav-item"><a href="./index.html">Студия</a></li>
-                <li class="nav-item"><a href="./portfolio.html">Портфолио</a></li>
-                <li class="nav-item"><a href="">Контакты</a></li>
+                <li class="link current"><a href="./index.html">Студия</a></li>
+                <li class="link"><a href="./portfolio.html">Портфолио</a></li>
+                <li class="link"><a href="">Контакты</a></li>
             </ul>
         </nav>
             <ul class="auth-nav">
-                <li class="mail"><a href="mailto:info@example.com">info@devstudio.com</a></li>
-                <li class="phone"><a href="tel:+380991111111">+38 096 111 11 11</a></li>
+                <li class="link"><a href="mailto:info@example.com">info@devstudio.com</a></li>
+                <li class="link"><a href="tel:+380991111111">+38 096 111 11 11</a></li>
             </ul>  
     </header>
     <main>
