--- a/portfolio.html
+++ b/portfolio.html
@@ -18,19 +18,19 @@
                 <a class="logo-studio" href="./index.html"><span class="logo-web">Web</span>Studio</a>
             </div>
             <ul class="site-nav">
-                <li class="nav-item"><a href="./index.html">Студия</a></li>
-                <li class="nav-item"><a href="./portfolio.html">Портфолио</a></li>
-                <li class="nav-item"><a href="">Контакты</a></li>
+                <li class="link"><a href="./index.html">Студия</a></li>
+                <li class="link current"><a href="./portfolio.html">Портфолио</a></li>
+                <li class="link"><a href="">Контакты</a></li>
             </ul>
         </nav>
         <ul class="auth-nav">
-            <li class="mail"><a href="mailto:info@example.com">info@devstudio.com</a></li>
-            <li class="phone"><a href="tel:+380991111111">+38 096 111 11 11</a></li>
+            <li class="link"><a href="mailto:info@example.com">info@devstudio.com</a></li>
+            <li class="link"><a href="tel:+380991111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
         <section class="portfolio-button">
-            <h1>Портфолио</h1>
+            <h1 class="invisible">Портфолио</h1>
             <ul>
                 <li><button type="button">Все</button></li>
                 <li><button type="button">Веб-сайты</button></li>
@@ -46,57 +46,41 @@
                     <h2>Технокряк</h2>
                     <p>Веб-сайт</p>
                 </li>
-            </ul>
-            <ul>
                 <li>
                     <img src="./images/project2.jpg" alt="Дизайн" width="370" height="294">
                     <h2>Постер New Orlean vs Golden Star</h2>
                     <p>Дизайн</p>
                 </li>
-            </ul>
-            <ul>
                 <li>
                     <img src="./images/project3.jpg" alt="Приложение" width="370" height="294">
                     <h2>Ресторан Seafood</h2>
                     <p>Приложение</p>
                 </li>
-            </ul>
-            <ul>
                 <li>
                     <img src="./images/project4.jpg" alt="Маркетинг" width="370" height="294">
                     <h2>Проект Prime</h2>
                     <p>Маркетинг</p>
                 </li>
-            </ul>
-            <ul>
                 <li>
                     <img src="./images/project5.jpg" alt="Приложение" width="370" height="294">
                     <h2>Проект Boxes</h2>
                     <p>Приложение</p>
                 </li>
-            </ul>
-            <ul>
                 <li>
                     <img src="./images/project6.jpg" alt="Веб-сайт" width="370" height="294">
                     <h2>Inspiration has no Borders</h2>
                     <p>Веб-сайт</p>
                 </li>
-            </ul>
-            <ul>
                 <li>
                     <img src="./images/project7.jpg" alt="Дизайн" width="370" height="294">
                     <h2>Издание Limited Edition</h2>
                     <p>Дизайн</p>
                 </li>
-            </ul>
-            <ul>
                 <li>
                     <img src="./images/project8.jpg" alt="Маркетинг" width="370" height="294">
                     <h2>Проект LAB</h2>
                     <p>Маркетинг</p>
                 </li>
-            </ul>
-            <ul>
                 <li>
                     <img src="./images/project1.jpg" alt="Приложение" width="370" height="294">
                     <h2>Growing Business</h2>
